--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
      
      
     - name: Deploying on surge 
-      run : surge ./build http://expnse-tracker-app-inam.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
+      run : surge ./build covid-19-app-inam.surge.sh --token ${{ secrets.SURGE_TOKEN }}
